--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Memory Game</title>
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <!-- Google Fonts : Press Start 2P -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts : Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+      <div class="header">
+        <h1>Memory Game</h1>
+      </div>
+      <div class="score" id="score"></div>
+      <div class="message" id="message"></div>
+      <div class="grid"></div>
+    </div>
+    <script type="text/javascript" src="../assets/js/app.js"></script>
+    <script type="text/javascript" src="../assets/js/modules/tools.js"></script>
+    <script type="text/javascript" src="../assets/js/modules/game.js"></script>
   </body>
 </html>
